@@ -13,6 +13,7 @@ export(l2sIntersect)
 export(lineIntersect2D)
 export(mapOnMesh)
 export(mesh_area)
+export(mesh_intersect_rays)
 export(mesh_mark_pois)
 export(mesh_orient_by_contour_pca)
 export(mesh_recenter)
@@ -34,13 +35,12 @@ export(proj_poi)
 export(proj_pt2l)
 export(proj_pt2p)
 export(ptOnSeg)
-export(rayTrace)
 export(rotatePt_2D)
 export(rotate_v2v)
 export(sPathConnect)
 export(sPathQuery)
-export(sRayTrace)
 export(split_pts)
+export(trace_ray)
 import(Morpho)
 import(Rvcg)
 import(data.table)
