@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/rayTrace.R
-\name{rayTrace}
-\alias{rayTrace}
+% Please edit documentation in R/mesh_intersect_rays.R
+\name{mesh_intersect_rays}
+\alias{mesh_intersect_rays}
 \title{Compute the mesh intersection points for a set of rays}
 \usage{
-rayTrace(rays, mesh, parExec = FALSE, maxCores = NA)
+mesh_intersect_rays(rays, mesh, parExec = FALSE, maxCores = NA)
 }
 \arguments{
 \item{rays}{A matrix-like object (N x 6, where N is the number of rays)
@@ -45,5 +45,5 @@ rays$x2 <- rays$x1
 rays$y2 <- rays$y1
 rays$z2 <- rays$z1 - 1
 
-rayTrace(rays[1:3,], alignedMesh, parExec = FALSE)
+mesh_intersect_rays(rays[1:3,], alignedMesh, parExec = FALSE)
 }
