@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/rayTrace.R
-\name{sRayTrace}
-\alias{sRayTrace}
+% Please edit documentation in R/mesh_intersect_rays.R
+\name{trace_ray}
+\alias{trace_ray}
 \title{Compute the intersection points of a ray and a set of triangles}
 \usage{
-sRayTrace(o, d, v0, v1, v2, epsilon)
+trace_ray(o, d, v0, v1, v2, epsilon)
 }
 \arguments{
 \item{o}{A matrix-like (N x 3) object with the coordinate of the ray origin
@@ -60,6 +60,6 @@ v1 <- as.matrix(triangles[,4:6])
 v2 <- as.matrix(triangles[,7:9])
 # Set epsilon value:
 epsilon <- .Machine$double.eps
-sRayTrace(o, d, v0, v1, v2, epsilon)
+trace_ray(o, d, v0, v1, v2, epsilon)
 
 }
